--- a/WebApp_Tienda/src/main/webapp/Styles/menu.css
+++ b/WebApp_Tienda/src/main/webapp/Styles/menu.css
@@ -1,5 +1,5 @@
 *{
-    margin:0;
+    margin :0;
     padding: 0;
     box-sizing: border-box;
     font-family: BlinkMacSystemFont, sans-serif;
@@ -9,7 +9,8 @@ nav{
     max-width: 100%;
     background-color: coral;
     font-size: 100%;
-    margin: 50px auto auto;
+    margin: 0px auto auto;
+    color: lightgreen;
 }
 .menu-horizontal{
     list-style: none;
@@ -18,7 +19,7 @@ nav{
 }
 .menu-horizontal >li >a{
     display: block;
-    padding: 20px 30px;
+    padding: 15px 15px;
     color: white;
     text-decoration: none;
 }
